--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+  background-color: rgba(22, 22, 31, 0.85);
+}
+
+p, h1, h2 { color: white;}
