--- a/src/app/components/series-list/series-list.component.html
+++ b/src/app/components/series-list/series-list.component.html
@@ -1,5 +1,5 @@
 <div class="list row">
-  <div class="col-md-8">
+  <!--<div class="col-md-8">
     <div class="input-group mb-3">
       <input
         type="text"
@@ -17,9 +17,9 @@
         </button>
       </div>
     </div>
-  </div>
+  </div>-->
 
-  <div class="col-md-6">
+  <div class="col-md-5">
     <h4>Liste</h4>
     <ul class="list-group">
       <li
@@ -33,12 +33,9 @@
     </ul>
 
   </div>
-  <div class="col-md-6">
+  <div class="col-md-7">
     <div *ngIf="currentWS">
-      <h4>Tutorial</h4>
-      <div>
-        <label><strong><a href="{{currentWS.link}}" target="_blank">{{ currentWS.name }}</a></strong></label>
-      </div>
+      <h4>{{ currentWS.name }}</h4>
       <div>
         <label><strong>Description:</strong></label>
         {{ currentWS.desc }}
