--- a/src/styles.css
+++ b/src/styles.css
@@ -2,4 +2,7 @@ body{
   background-color: rgba(22, 22, 31, 0.85);
 }
 
-p, h1, h2 { color: white;}
+p, h1, h2, h3, h4 { 
+  color: white;
+  font-family: Helvetica,Arial,sans-serif; 
+}
