--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,23 @@
   <nav class="navbar navbar-expand navbar-dark bg-dark">
     <a href="#" class="navbar-brand">HorrorDB</a>
     <div class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a routerLink="/webseries" class="nav-link">Web Series</a>
+      <li class="nav-item dropdown">
+        <a class="nav-link" href="#" id="ddWeb" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Web
+        </a>
+        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="ddWeb">
+          <li><a routerLink="/web" class="dropdown-item" href="#">Liste web</a></li>
+          <li><a routerLink="/addWeb" class="dropdown-item" href="#">Ajouter une entrée</a></li>
+        </ul>
       </li>
-      <li class="nav-item">
-        <a routerLink="/add" class="nav-link">Add</a>
+      <li class="nav-item dropdown">
+        <a class="nav-link" href="#" id="ddSeries" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Séries Web
+        </a>
+        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="ddSeries">
+          <li class="nav-item"><a routerLink="/webseries" class="dropdown-item">Séries Web</a></li>
+          <li class="nav-item"><a routerLink="/addSeries" class="dropdown-item">Ajouter une série</a></li>
+        </ul>
       </li>
     </div>
   </nav>
