--- a/src/app/components/web-form/web-form.component.html
+++ b/src/app/components/web-form/web-form.component.html
@@ -1,1 +1,52 @@
-<p>web-form works!</p>
+<div>
+    <div class="submit-form">
+      <div *ngIf="!submitted">
+        <div class="form-group">
+          <label for="name">Nom</label>
+          <input
+            type="text"
+            class="form-control"
+            id="name"
+            required #name="ngModel"
+            [(ngModel)]="we.name"
+            name="name"
+          />
+        </div>
+
+        <div [hidden]="!name.pristine" class="alert alert-danger">Le nom est obligatoire</div>
+  
+        <div class="form-group">
+          <label for="desc">Description</label>
+          <input
+            class="form-control"
+            id="desc"
+            required #desc="ngModel"
+            [(ngModel)]="we.desc"
+            name="desc"
+          />
+        </div>
+
+        <div [hidden]="!desc.pristine" class="alert alert-danger">La description est obligatoire</div>
+    
+        <div class="form-group">
+          <label for="link">Lien</label>
+          <input
+            type="url"
+            class="form-control"
+            id="link"
+            required #link="ngModel"
+            [(ngModel)]="we.link"
+            name="link"
+          />
+        </div>
+
+        <div [hidden]="!link.pristine" class="alert alert-danger">Le lien est obligatoire</div>
+  
+        <button (click)="addWebElement()" class="btn btn-success">Submit</button>
+      </div>
+  
+      <div *ngIf="submitted">
+        <h4>Entrée ajouté avec succès</h4>
+      </div>
+    </div>
+</div>
