--- a/src/app/components/web-list/web-list.component.html
+++ b/src/app/components/web-list/web-list.component.html
@@ -1,1 +1,55 @@
-<p>web-list works!</p>
+<div class="list row">
+    <!--<div class="col-md-8">
+      <div class="input-group mb-3">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Rechercher le nom"
+          [(ngModel)]="name"
+        />
+        <div class="input-group-append">
+          <button
+            class="btn btn-outline-secondary"
+            type="button"
+            (click)="searchName()"
+          >
+            Rechercher
+          </button>
+        </div>
+      </div>
+    </div>-->
+  
+    <div class="col-md-5">
+      <h4>Liste</h4>
+      <ul class="list-group">
+        <li
+          class="list-group-item"
+          *ngFor="let wb of webelements; let i = index"
+          [class.active]="i == currentIndex"
+          (click)="setActiveWebElement(wb, i)"
+        >
+          {{ wb.name }}
+        </li>
+      </ul>
+  
+    </div>
+    <div class="col-md-7">
+      <div *ngIf="currentWeb">
+        <h4>{{ currentWeb.name }}</h4>
+        <div>
+          <label><strong>Description:</strong></label>
+          {{ currentWeb.desc }}
+        </div>
+  
+        <a class="badge bg-primary" routerLink="/weblist/{{ currentWeb.id }}">
+          Edit
+        </a>
+      </div>
+  
+      <div *ngIf="!currentWeb">
+        <br />
+        <p>Sélectionnez une série pour avoir un aperçu</p>
+      </div>
+    </div>
+  </div>
+  
